# inbound-controller-ws/src/main/java/com/gox/controller/BookingRestController.java
@@ -3,10 +3,13 @@ import com.gox.domain.entity.booking.Booking;
 import com.gox.domain.entity.booking.BookingStatus;
 import com.gox.domain.service.BookingFacade;
 import com.gox.domain.service.BookingFactory;
+import com.gox.domain.vo.BookingEstimate;
+import com.gox.mapper.BookingEstimateMapper;
 import com.gox.mapper.BookingMapper;
 import com.gox.rest.api.BookingsApi;
 import com.gox.rest.dto.BookingCreateRequestDto;
 import com.gox.rest.dto.BookingDto;
+import com.gox.rest.dto.BookingEstimateDto;
 import com.gox.rest.dto.PatchBookingRequestDto;
 import com.gox.security.CurrentUserDetailService;
 import org.springframework.http.ResponseEntity;
@@ -21,14 +24,16 @@ public class BookingRestController implements BookingsApi {
     private final BookingFactory bookingFactory;
     private final BookingMapper mapper;
     private final CurrentUserDetailService currentUserService;
-
+    private final BookingEstimateMapper estimateMapper;
     public BookingRestController(BookingFacade bookingFacade,
                                  BookingFactory bookingFactory,
                                  BookingMapper mapper,
+                                 BookingEstimateMapper estimateMapper,
                                  CurrentUserDetailService currentUserService) {
         this.bookingFacade      = bookingFacade;
         this.bookingFactory     = bookingFactory;
         this.mapper             = mapper;
+        this.estimateMapper     = estimateMapper;
         this.currentUserService = currentUserService;
     }
 
@@ -63,5 +68,25 @@ public class BookingRestController implements BookingsApi {
     public ResponseEntity<Void> patchBooking(Long bookingId, PatchBookingRequestDto dto) {
         bookingFacade.changeStatus(bookingId, BookingStatus.valueOf(dto.getStatus().name()));
         return ResponseEntity.ok().build();
+    }
+
+    @Override
+    public ResponseEntity<BookingEstimateDto> estimateBooking(
+            BookingCreateRequestDto dto) {
+
+        // 1) вызываем фасад, он возвращает VO
+        BookingEstimate vo = bookingFacade.estimate(
+                dto.getCarId(),
+                dto.getPickupLocationId(),
+                dto.getDropoffLocationId(),
+                currentUserService.getFullCurrentUser(),
+                dto.getStartDate(),
+                dto.getEndDate()
+        );
+
+        // 2) мапим VO → REST-DTO
+        BookingEstimateDto estimateDto = estimateMapper.toDto(vo);
+
+        return ResponseEntity.ok(estimateDto);
     }
 }
