# inbound-controller-ws/src/main/java/com/gox/mapper/BookingEstimateMapper.java
@@ -1,0 +1,13 @@
+package com.gox.mapper;
+
+
+import com.gox.domain.vo.BookingEstimate;
+import com.gox.rest.dto.BookingEstimateDto;
+import org.mapstruct.Mapper;
+
+@Mapper(componentModel = "spring")
+public interface BookingEstimateMapper {
+
+    BookingEstimateDto toDto(BookingEstimate vo);
+
+}
